# lead-enrichment-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/lead_enrichment/: __init__.py  config.py  driver.py  enrichment.py  exceptions.py  models.py  normalizer.py  providers.py  scoring.py  sink.py
tests/: conftest.py  test_cooldown_readmit.py  test_name_matching.py  test_scoring.py
