[project]
name = "lead-enrichment-pipeline"
version = "0.1.0"
description = "Multi-vendor skip-trace waterfall + AI enrichment + multi-signal scoring pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rey Baquirin" }]
dependencies = [
    "requests>=2.31",
    "openai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lead_enrichment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
